--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -157,7 +157,46 @@
         padding: 2px 7px;
     }
 
-    .input-group {
+ 
+    
+}
+
+
+#type-manufactury-popup {
+      fieldset {
+                border: none;
+                margin: 0;
+                padding: 0;
+            }
+            fieldset:not(:last-child) {
+            margin-right:   53px;
+        }
+}
+
+
+#employer-type-popup, #employer-type-popup2 {
+    input {
+        padding-right: 30px;
+    }
+    .input-group[data-loading="true"] {
+        &:after {
+            content: '';
+            position: absolute;
+            right: 5px;
+            width: 16px;
+            height: 100%;
+            top: 0;
+            background: url(../img/sprites/svg/smile.svg) no-repeat center/contain;
+            animation: spin 2s linear infinite;
+        }
+    }
+
+}
+
+
+#work-type-popup {
+    
+       .input-group {
         &:not(:last-child) {
             border-bottom: 1px solid #fff;
             padding-bottom: 12px;
@@ -186,37 +225,4 @@
         }
     }
     
-    
-}
-
-
-#type-manufactury-popup {
-      fieldset {
-                border: none;
-                margin: 0;
-                padding: 0;
-            }
-            fieldset:not(:last-child) {
-            margin-right:   53px;
-        }
-}
-
-
-#employer-type-popup {
-    input {
-        padding-right: 30px;
-    }
-    .input-group[data-loading="true"] {
-        &:after {
-            content: '';
-            position: absolute;
-            right: 5px;
-            width: 16px;
-            height: 100%;
-            top: 0;
-            background: url(../img/sprites/svg/smile.svg) no-repeat center/contain;
-            animation: spin 2s linear infinite;
-        }
-    }
-
 }
