--- a/app/less/vacancy/_popup.less
+++ b/app/less/vacancy/_popup.less
@@ -145,3 +145,16 @@
 		}
 	}
 }
+
+
+#modal-2 {
+	.rows {
+		padding-left: 25px - 8px;
+		padding-right: 25px - 8px;
+	}
+
+	.row {
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+}
