--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -1,4 +1,6 @@
 .row.clients.modal-row
+	i.switcher
+			+svg2('Union')
 	.modal-row__controls
 		p
 			|Клиенты
@@ -7,3 +9,484 @@
 				|+ 
 			|добавить клиента
 	.modal-row__layer
+		
+		.row__full-info.table-full
+				.table-full__choosen.choosen
+					.table-full__row
+						p.table-full__title
+							|Отобраны
+					.table-full__row.f-container
+							.table-full__cell.row__cell.cell-names
+								p
+									|Гурківський Олександр
+								span.row__indicator.indicator.department
+									|2
+							.table-full__cell.row__cell.cell-status
+								.cell-status__left
+									.cell-status__slider(data-date="")
+										p.status.choosen
+											|Подготовка CV
+										p.status.choosen.active
+											|CV отправлено
+										p.status.ready
+											|Утвержден
+										p.status.ready
+											|Контракт подписан
+										p.status.wait
+											|Подан в визовый центр
+										p.status.department
+											|Получил разрешение
+										p.status.department
+											|Забрал разрешение
+										p.status.department
+											|Билеты куплены
+										p.status.busy
+											|Трудоустроен
+									.cell-status__controls
+										.cell-status__control-left
+											i.ico.rotate-left
+												+svg2('little-arrow')
+										.cell-status__control-right
+											i.ico
+												+svg2('little-arrow')
+								.cell-status__right
+									i.ico
+										+svg2('phone2')
+									i.ico
+										+svg2('docs')
+									i.ico
+										+svg2('page')
+									.tag.manager-tag.purple-tag
+										|AC
+							.table-full__cell.row__cell.cell-exp
+							.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Лемешко Аліна
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen.active
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+								.tag.manager-tag.purple-tag
+									|AC
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Романов Валентин
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen.active
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+								i.ico
+									+svg2('phone2')
+								i.ico
+									+svg2('page')
+								.tag.manager-tag.purple-tag
+									|AC
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Тарасюк Віталій
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen.active
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+								i.ico
+									+svg2('page')
+								.tag.manager-tag.purple-tag
+									|AC
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Бичківська Алла
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen.active
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+								.tag.manager-tag.purple-tag
+									|AC
+						.table-full__cell.row__cell.cell-exp
+						
+							i.label.green__label
+								|Д2
+							
+							p
+								|Агроном
+							//- i.label.dirty-green__label
+							//- 	|ВСТ
+						.table-full__cell.row__cell.cell-notes
+				.table-full__ready.ready
+					.table-full__row
+						p.table-full__title
+							|Готовятся к подаче
+					.table-full__row.f-container
+							.table-full__cell.row__cell.cell-names
+								p
+									|Червінський Йосип
+							.table-full__cell.row__cell.cell-status
+								.cell-status__left
+									.cell-status__slider(data-date="")
+										p.status.choosen
+											|Подготовка CV
+										p.status.choosen
+											|CV отправлено
+										p.status.ready.active
+											|Утвержден
+										p.status.ready
+											|Контракт подписан
+										p.status.wait
+											|Подан в визовый центр
+										p.status.department
+											|Получил разрешение
+										p.status.department
+											|Забрал разрешение
+										p.status.department
+											|Билеты куплены
+										p.status.busy
+											|Трудоустроен
+									.cell-status__controls
+										.cell-status__control-left
+											i.ico.rotate-left
+												+svg2('little-arrow')
+										.cell-status__control-right
+											i.ico
+												+svg2('little-arrow')
+								.cell-status__right
+							.table-full__cell.row__cell.cell-exp
+								+stars('EN', 3)
+							.table-full__cell.row__cell.cell-notes
+								p
+									|Записан в посольство на 10.05 Записан в посольство на 10.05
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Шащук Іван
+						.table-full__cell.row__cell.cell-status
+								.cell-status__left
+									.cell-status__slider(data-date="")
+										p.status.choosen
+											|Подготовка CV
+										p.status.choosen
+											|CV отправлено
+										p.status.ready.active
+											|Утвержден
+										p.status.ready
+											|Контракт подписан
+										p.status.wait
+											|Подан в визовый центр
+										p.status.department
+											|Получил разрешение
+										p.status.department
+											|Забрал разрешение
+										p.status.department
+											|Билеты куплены
+										p.status.busy
+											|Трудоустроен
+									.cell-status__controls
+										.cell-status__control-left
+											i.ico.rotate-left
+												+svg2('little-arrow')
+										.cell-status__control-right
+											i.ico
+												+svg2('little-arrow')
+								.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+							i.label.green__label
+								|Практика
+							p
+								|Поля
+						.table-full__cell.row__cell.cell-notes
+				.table-full__wait.wait
+					.table-full__row
+						p.table-full__title
+							|Ждут разрешения
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Іванчик Олександр
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait.active
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Волтарніст Юлія
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait.active
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Ситнік Оксана
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait.active
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+				.table-full__department.department
+					.table-full__row
+						p.table-full__title
+							|Готовятся к отъезду
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Коргун Максим
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department.active
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
+				.table-full__busy.busy
+					.table-full__row
+						p.table-full__title
+							|Трудоустроены
+					.table-full__row.f-container
+						.table-full__cell.row__cell.cell-names
+							p
+								|Конончук Віталій
+						.table-full__cell.row__cell.cell-status
+							.cell-status__left
+								.cell-status__slider(data-date="")
+									p.status.choosen
+										|Подготовка CV
+									p.status.choosen
+										|CV отправлено
+									p.status.ready
+										|Утвержден
+									p.status.ready
+										|Контракт подписан
+									p.status.wait
+										|Подан в визовый центр
+									p.status.department
+										|Получил разрешение
+									p.status.department
+										|Забрал разрешение
+									p.status.department
+										|Билеты куплены
+									p.status.busy.active
+										|Трудоустроен
+								.cell-status__controls
+									.cell-status__control-left
+										i.ico.rotate-left
+											+svg2('little-arrow')
+									.cell-status__control-right
+										i.ico
+											+svg2('little-arrow')
+							.cell-status__right
+						.table-full__cell.row__cell.cell-exp
+						.table-full__cell.row__cell.cell-notes
