--- a/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
@@ -70,4 +70,6 @@
 				.rows
 					include _main-info
 					include _clients
+					include _demands
+					include _terms
 					include ../../work-popup/_feedback
