--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -64,5 +64,46 @@
 					span.indicator.busy.main-info__indicator
 						|2
 	.modal-row__layer.main-info_right
+		.main-info__choose-block
+			.choose-employer
+				p
+					|Выберете работодателя
+			.employer-name
+				p
+					|Thompson Equestrian Partners
+			.full-info
+				p.country-vacancy
+					|NO 293
+				p.products
+					span.visa-type
+						|Сезонная - 
+					span.types
+						| Цветы, Теплицы, Молочные коровы, Мясные коровы
 		.main-info__layer_left
+			.main-info__contact-person
+				p
+					|Контактное лицо
+				span
+					|Anne Lise Haukadal
+			.main-info__phones
+				p
+					|Телефоны
+				a(href="tel:+4797167262")
+					|+4797167262
+			.main-info__email
+				p
+					|E-Mail
+				a(href="mailto:kroken@kroken.no")
+					|kroken@kroken.no
 		.main-info__layer_right
+			.map
+				div(style='overflow:hidden;width: 100%;position: relative;')
+					iframe(width='100%' height='200' src='https://maps.google.com/maps?width=100%&height=200&hl=en&q=%D0%96%D0%B8%D1%82%D0%BE%D0%BC%D0%B8%D1%80+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&ie=UTF8&t=&z=11&iwloc=B&output=embed' frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
+					div(style='position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;')
+						small(style='line-height: 1.8;font-size: 2px;background: #fff;')
+							| Powered by 
+							a(href='https://embedgooglemaps.com/ru/') embedgooglemaps RU
+							|	&amp; 
+							a(href='https://iamsterdamcard.it') i amsterdamcard it
+					style.
+						#gmap_canvas img{max-width:none!important;background:none!important}
