--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -104,7 +104,7 @@
         padding: 0 5px;
     }
 
-    .confirm-bnt {
+    .confirm-bnt, .cancel-bnt {
         background: @secondary;
         display: block;
         margin: 0 auto;
