--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -292,6 +292,38 @@ p.status {
 		border-top-right-radius: 25px;
 		border-bottom-right-radius: 25px;
 	}
+
+			&.choosen {
+				.cell-status__control-right,  .cell-status__control-left   {
+					background: @grass-green;
+				}
+			
+			}
+
+			&.ready {
+				.cell-status__control-right,  .cell-status__control-left   {
+					background: @green;
+				}
+				
+			}
+
+			&.wait {
+				.cell-status__control-right,  .cell-status__control-left   {
+					background: @teal;
+				}
+			}
+
+			&.department {
+				.cell-status__control-right,  .cell-status__control-left   {
+					background: @blue;
+				}
+			}
+
+			&.busy {
+				.cell-status__control-right,  .cell-status__control-left   {
+					background: @brown;
+				}
+			}
 }
 
 
