--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -61,7 +61,7 @@
 									|Билеты куплены
 								p.status.busy
 									|Трудоустроен
-							.cell-status__controls
+							.cell-status__controls.choosen
 								.cell-status__control-left
 									i.ico.rotate-left
 										+svg2('little-arrow')
@@ -108,7 +108,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.choosen
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -149,7 +149,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.choosen
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -190,7 +190,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.choosen
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -233,7 +233,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.choosen
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -282,7 +282,7 @@
 									|Билеты куплены
 								p.status.busy
 									|Трудоустроен
-							.cell-status__controls
+							.cell-status__controls.ready
 								.cell-status__control-left
 									i.ico.rotate-left
 										+svg2('little-arrow')
@@ -319,7 +319,7 @@
 									|Билеты куплены
 								p.status.busy
 									|Трудоустроен
-							.cell-status__controls
+							.cell-status__controls.ready
 								.cell-status__control-left
 									i.ico.rotate-left
 										+svg2('little-arrow')
@@ -362,7 +362,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.wait
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -397,7 +397,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.wait
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -432,7 +432,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.wait
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -471,7 +471,7 @@
 								|Билеты куплены
 							p.status.busy
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.department
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
@@ -510,7 +510,7 @@
 								|Билеты куплены
 							p.status.busy.active
 								|Трудоустроен
-						.cell-status__controls
+						.cell-status__controls.busy
 							.cell-status__control-left
 								i.ico.rotate-left
 									+svg2('little-arrow')
