--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -9,7 +9,9 @@
 				|+ 
 			|добавить клиента
 	.modal-row__layer
-		
+		.modal-row__clients-row.active
+			p
+				|Гурківський Олександр, Лемешко Аліна, Романов Валентин, Тарасюк Віталій, Бичківська Алла, Червінський Йосип, Шащук Іван, Іванчик Олесандр, Гурківський Олександр, Лемешко Аліна, Романов Валентин, Тарасюк Віталій, Бичківська Алла, Червінський Йосип, Шащук Іван, Іванчик Олесандр
 		.row__full-info.table-full
 				.table-full__choosen.choosen
 					.table-full__row
