--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -1,7 +1,10 @@
 #modal-1.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1' data-custom-close="modal-1")
-		.modal__wrapper.my-modal-wrapper(data-custom-close="modal-1")
+	.modal__overlay(tabindex='-1')
+		.modal__wrapper.my-modal-wrapper
 			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
+				span.modal__close(data-custom-close="modal-1")
+					span
+					span
 				.sidebar
 					.sidebar__layout
 						.f-container
@@ -36,7 +39,9 @@
 											span.delete-task-item
 							.sidebar__notes
 								.input-group
-									textarea(rows="4" class="sidebar__area-notes" data-elastic="true")
+									p
+										|Заметки
+									textarea(rows="5" class="sidebar__area-notes" data-elastic="true")
 							.sidebar__actions
 								ul.sidebar__action
 									li.sidebar__action-item
@@ -46,6 +51,10 @@
 												|Исключить из рассылки
 							.sidebar__menu
 								ul.sidebar__filter
+									li.sidebar__filter-item
+										.sidebar__filter-wrapper
+											p
+												|Данные работодателя
 									li.sidebar__filter-item
 										.sidebar__filter-wrapper
 											p
